Fix z-index issue

--- a/src/assets/scsss/_sociallinks.scss
+++ b/src/assets/scsss/_sociallinks.scss
@@ -1,5 +1,6 @@
 .social-links {
   position: fixed;
+  z-index: 10;
   bottom: 30px;
   left: 10px;
   .social-links-container {
